[package]
name = "day-03"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }