[package]
name = "day-09"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { workspace = true }
color-eyre = { workspace = true }

lending-iterator = "0.1"

[dev-dependencies]
indoc = { workspace = true }