[package]
name = "day-11"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { workspace = true }
color-eyre = { workspace = true }
gcd = "2.2"

[dev-dependencies]
indoc = { workspace = true }
